feat: add LSP tool extension
- Language Server Protocol integration for code intelligence
- Supports: definition, references, hover, symbols, rename, code actions
- Workspace diagnostics and symbol search
- Call hierarchy (incoming/outgoing calls)
- Rust-analyzer specific: flycheck, macro expansion, SSR, runnables
- Config-driven with defaults for 30+ languages
- Uses vscode-languageserver-types for LSP protocol types

Based on oh-my-pi by can1357

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "oxlint ."
   },
   "devDependencies": {
+    "@mariozechner/pi-ai": "*",
     "@mariozechner/pi-coding-agent": "*",
     "@mariozechner/pi-tui": "*",
     "@sinclair/typebox": "^0.34.41",
