--- a/extensions/webfetch/package.json
+++ b/extensions/webfetch/package.json
@@ -1,12 +1,14 @@
 {
   "name": "pi-extension-webfetch",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "type": "module",
-  "pi": {
-    "extensions": ["./index.ts"]
-  },
   "dependencies": {
     "turndown": "^7.2.2"
+  },
+  "pi": {
+    "extensions": [
+      "./index.ts"
+    ]
   }
 }
