--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "devDependencies": {
     "@mariozechner/pi-ai": "*",
-    "@mariozechner/pi-coding-agent": "*",
-    "@mariozechner/pi-tui": "*",
+    "@mariozechner/pi-coding-agent": "^0.49.2",
+    "@mariozechner/pi-tui": "^0.49.2",
     "@sinclair/typebox": "^0.34.41",
     "@types/bun": "latest",
     "@types/turndown": "^5.0.5",
