--- a/package.json
+++ b/package.json
@@ -2,20 +2,36 @@
   "name": "dot-pi",
   "private": true,
   "type": "module",
+  "keywords": ["pi-package"],
   "scripts": {
     "check": "tsc --noEmit",
     "format": "oxfmt .",
     "lint": "oxlint ."
   },
+  "pi": {
+    "extensions": ["extensions"],
+    "skills": ["skills"]
+  },
+  "dependencies": {
+    "@anthropic-ai/sandbox-runtime": "^0.0.32",
+    "cli-highlight": "^2.1.11",
+    "exa-js": "^1.1.4",
+    "glob": "^11.0.0",
+    "jsonc-parser": "^3.3.1",
+    "turndown": "^7.2.0",
+    "vscode-languageserver-types": "^3.17.5",
+    "ws": "^8.18.0"
+  },
   "devDependencies": {
-    "@mariozechner/pi-ai": "*",
-    "@mariozechner/pi-coding-agent": "^0.49.2",
-    "@mariozechner/pi-tui": "^0.49.2",
-    "@sinclair/typebox": "^0.34.41",
+    "@mariozechner/pi-ai": "^0.50.0",
+    "@mariozechner/pi-coding-agent": "^0.50.0",
+    "@mariozechner/pi-tui": "^0.50.0",
+    "@sinclair/typebox": "^0.34.48",
     "@types/bun": "latest",
-    "@types/turndown": "^5.0.5",
+    "@types/turndown": "^5.0.6",
+    "@types/ws": "^8.5.10",
     "oxfmt": "^0.24.0",
-    "oxlint": "^1.0.0",
-    "typescript": "^5.7.0"
+    "oxlint": "^1.42.0",
+    "typescript": "^5.9.3"
   }
 }
