--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
     "vscode-languageserver-types": "^3.17.5",
     "ws": "^8.18.0"
   },
+  "peerDependencies": {
+    "@mariozechner/pi-ai": "*",
+    "@mariozechner/pi-coding-agent": "*",
+    "@mariozechner/pi-tui": "*",
+    "@sinclair/typebox": "*"
+  },
   "devDependencies": {
-    "@mariozechner/pi-ai": "^0.50.0",
-    "@mariozechner/pi-coding-agent": "^0.50.0",
-    "@mariozechner/pi-tui": "^0.50.0",
+    "@mariozechner/pi-ai": "0.51.6",
+    "@mariozechner/pi-coding-agent": "0.51.6",
+    "@mariozechner/pi-tui": "0.51.6",
     "@sinclair/typebox": "^0.34.48",
     "@types/bun": "latest",
     "@types/turndown": "^5.0.6",
