--- a/extensions/webfetch/package.json
+++ b/extensions/webfetch/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "turndown": "^7.2.2"
+    "cheerio": "^1.2.0",
+    "turndown": "^7.2.2",
+    "unpdf": "^1.4.0"
   },
   "pi": {
     "extensions": [
